--- a/public/style.css
+++ b/public/style.css
@@ -1,4 +1,6 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100&display=swap");
 body {
-    margin: 0;
-    min-height: 100vh;
+  margin: 0;
+  min-height: 100vh;
+  font-family: 'Roboto Slab', serif;
 }
